--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "lunarphp/scout-database-engine",
+    "name": "herinneringenoplinnen/lunarphp-scout-database-engine-legacy",
     "description": "Laravel Scout engine to allow full searching in MySQL and PostgreSQL.",
     "keywords": ["laravel", "scout", "search"],
     "type": "library",
@@ -29,12 +29,8 @@
     },
     "require": {
         "php": "^8.1",
-        "laravel/framework": "^9.0|^10.0",
-        "laravel/scout": "^9.4|^10.0",
+        "laravel/framework": "^9.0|^10.0|^11.0",
+        "laravel/scout": "^9.4|^10.0|^11.0",
         "spatie/laravel-blink": "^1.6"
-    },
-    "require-dev": {
-        "orchestra/testbench": "^7.0|^8.0",
-        "phpunit/phpunit": "^9.5"
     }
 }
