--- a/composer.json
+++ b/composer.json
@@ -28,8 +28,8 @@
         }
     },
     "require": {
-        "php": "^8.1",
-        "laravel/framework": "^9.0|^10.0|^11.0",
+        "php": "^8.1|^8.2|^8.3|^8.4",
+        "laravel/framework": "^9.0|^10.0|^11.0|^12.0",
         "laravel/scout": "^9.4|^10.0|^11.0",
         "spatie/laravel-blink": "^1.6"
     }
